# vulkan-raytracer

./: Cargo.toml
assets/models/default_chief/: license.txt  scene.gltf
assets/shaders/: raytrace.glslf  raytrace.glslv  rect.glslf  rect.glslv
assets/shaders/raytrace/: raytrace.comp  raytrace.frag
assets/shaders/raytrace/utils/: const.comp  rand.comp  raytracePrimitives.comp  samplers.comp  sdfPrimitives.comp  utils.comp
shaders/: RayTracing.rmiss  RayTracing.shadow.rahit  RayTracing.shadow.rmiss
shaders/raytrace/utils/: const.comp
src/: app.rs  fractal_compute_pipeline.rs  main.rs  pixels_draw_pipeline.rs  place_over_frame.rs
